--- a/FLORES.html
+++ b/FLORES.html
@@ -11,11 +11,7 @@
 <body class="container">
   <audio src="/sound/pago.mp3" autoplay></audio>
   <div id="lyrics">
-    <h1 class="titulo">Es tu día querida madre y hoy como cada año 
-      yo le agradezco a dios por permitirme tenerte como madre. 
-      Te agradezco una vez más cada uno de tus cuidados, cada beso, 
-      cada abrazo que solo tu sabes dar, tu amor incondicional presente 
-      en cada instante, yo siempre voy a adorarte por ser la mejor mama del mundo.</h1>
+    <h1 class="titulo">Es tu día querida madre y hoy como cada año yo le agradezco a dios por permitirme tenerte como madre, yo siempre voy a adorarte por ser la mejor mama del mundo.</h1>
   </div>
   <div class="night"></div>
     <div class="flowers">
